# Django

./: db.sqlite3  pyproject.toml
blog/: admin.py  cb_views.py  fbv_urls.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options_blog_author.py  0003_comment.py  0004_alter_comment_options_blog_image_alter_blog_category.py  0005_blog_thumbnail.py
config/: settings.py  urls.py
member/: views.py
static/css/: bootstrap-reboot.rtl.min.css.map:Zone.Identifier
templates/: about.html  base.html  blog_create.html  blog_detail.html  blog_form.html  blog_list.html  blog_update.html  form-js.html  pagination.html  test_get.html  test_post.html
templates/blog/: blog_detail.html  blog_form.html  blog_list.html
templates/registration/: login.html  signup.html
utils/: models.py
