[project]
name = "djangoproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "django>=6.0.1",
    "django-extensions (>=4.1,<5.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "utils (>=1.0.2,<2.0.0)",
    "django-summernote (>=0.8.20.0,<0.9.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
]
